# KamaCache-CPP

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  conanfile.txt  docker-compose.yml  run_cache_cluster.sh  test_singleflight.sh  vcpkg-configuration.json  vcpkg.json  xmake.lua
example/: CMakeLists.txt  example.cpp
example/http_gateway/: CMakeLists.txt  http_gateway.cpp
include/kcache/: client.h
src/: CMakeLists.txt  cache.cpp  cache.h  consistent_hash.h  http.cpp  http.h  http_gateway.cpp  lru.cpp  lru.h  main.cpp  node.cpp  singleflight.h
src/cache/: lru.cpp
src/client/: CMakeLists.txt  client_sdk.cpp
src/consistent_hash/: consistent_hash.cpp
src/group/: group.cpp
src/include/kcache/: cache.h  consistent_hash.h  group.h  grpc_server.h  peer.h  registry.h  server.h  singleflight.h
src/peer/: peer.cpp  peer_picker.cpp
src/proto/: kcache.proto
src/registry/: registry.cpp
src/server/: grpc_server.cpp  server.cpp
test/: CMakeLists.txt  test_cache.cpp  test_consistent_hash.cpp  test_group.cpp  test_http.cpp  test_lru.cpp
